metadata/force-app/main/default/objects/CustomName_uVXjx__c/CustomName_uVXjx__c.object-meta.xml
<CustomObject>
    <description>Description_KdDlI</description>
    <label>CustomLabel_qJNxm</label>
    <nameField>
        <label>CustomLabel_qJNxm</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_qJNxms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>