metadata/force-app/main/default/objects/CustomName_uVXjx__c/fields/CustomField_TOepm__c.field-meta.xml
<CustomField>
    <fullName>CustomField_TOepm__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldLMcPJ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>